# demo_mlops

./: LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/: .gitignore
models/: .gitignore
notebooks/: Wine_EDA.ipynb  Wine_Refactored_V1.ipynb
src/: evaluate.py  preprocess_data.py  train.py
